martian-derive/tests/ui_martian_filetype/test_special_char_structname.rs

use martian_derive::martian_filetype;

martian_filetype! {Txt4^File, txt}

fn main() {}